apronParser.java
// Generated from apron.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class apronParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__6=1, T__5=2, T__4=3, T__3=4, T__2=5, T__1=6, T__0=7, PERM=8, LIMITING=9, 
		ACTION=10, OWN_FLOWS=11, OTHERS_FLOWS=12, ALL_FLOWS=13, MAX_PRIORITY=14, 
		EVENT_INTERCEPTION=15, MODIFY_EVENT_ORDER=16, FLOW_LEVEL=17, PORT_LEVEL=18, 
		SWITCH_LEVEL=19, IP_SRC=20, IP_DST=21, TCP_SRC=22, TCP_DST=23, VLAN_ID=24, 
		INT=25, FLOAT=26, IP=27, WITH=28, MASK=29, IP_FORMAT=30, SWITCH=31, LINK=32, 
		ALL_SWITCHES=33, BORDER_SWITCHES=34, ALL_DIRECT_LINKS=35, ALL_PATHS_AS_LINKS=36, 
		VIRTUAL=37, SINGLE_BIG_SWITCH=38, DROP=39, FORWARD=40, MODIFY=41, FIELD=42, 
		AND=43, OR=44, NOT=45, AS=46, RULE_COUNT_PER_SWITCH=47, SIZE_PERCENTAGE_PER_SWITCH=48, 
		STRING=49, WS=50;
	public static final String[] tokenNames = {
		"<INVALID>", "'{'", "')'", "','", "'-'", "'('", "':'", "'}'", "'PERM'", 
		"'LIMITING'", "'ACTION'", "'OWN_FLOWS'", "'OTHERS_FLOWS'", "'ALL_FLOWS'", 
		"'MAX_PRIORITY'", "'EVENT_INTERCEPTION'", "'MODIFY_EVENT_ORDER'", "'FLOW_LEVEL'", 
		"'PORT_LEVEL'", "'SWITCH_LEVEL'", "'IP_SRC'", "'IP_DST'", "'TCP_SRC'", 
		"'TCP_DST'", "'VLAN_ID'", "INT", "FLOAT", "'IP'", "'WITH'", "'MASK'", 
		"IP_FORMAT", "'SWITCH'", "'LINK'", "'ALL_SWITCHES'", "'BORDER_SWITCHES'", 
		"'ALL_DIRECT_LINKS'", "'ALL_PATHS_AS_LINKS'", "'VIRTUAL'", "'SINGLE_BIG_SWITCH'", 
		"'DROP'", "'FORWARD'", "'MODIFY'", "'FIELD'", "'AND'", "'OR'", "'NOT'", 
		"'AS'", "'RULE_COUNT_PER_SWITCH'", "'SIZE_PERCENTAGE_PER_SWITCH'", "STRING", 
		"WS"
	};
	public static final int
		RULE_program = 0, RULE_perm_list = 1, RULE_perm = 2, RULE_filter_expr = 3, 
		RULE_filter_term = 4, RULE_filter_factor = 5, RULE_filter_not_factor = 6, 
		RULE_flow_predicate = 7, RULE_field = 8, RULE_value_list = 9, RULE_value_range = 10, 
		RULE_ip_range = 11, RULE_ip_format = 12, RULE_topo = 13, RULE_physical_topo = 14, 
		RULE_switch_set = 15, RULE_sw_idx_list = 16, RULE_sw_idx = 17, RULE_link_set = 18, 
		RULE_link_list = 19, RULE_link = 20, RULE_path = 21, RULE_link_idx = 22, 
		RULE_virtual_topo = 23, RULE_switch_mapping = 24, RULE_virtual_switch_set = 25, 
		RULE_action = 26, RULE_field_list = 27, RULE_ownership = 28, RULE_max_priority = 29, 
		RULE_flow_table = 30, RULE_notification = 31, RULE_statistics = 32, RULE_perm_name = 33;
	public static final String[] ruleNames = {
		"program", "perm_list", "perm", "filter_expr", "filter_term", "filter_factor", 
		"filter_not_factor", "flow_predicate", "field", "value_list", "value_range", 
		"ip_range", "ip_format", "topo", "physical_topo", "switch_set", "sw_idx_list", 
		"sw_idx", "link_set", "link_list", "link", "path", "link_idx", "virtual_topo", 
		"switch_mapping", "virtual_switch_set", "action", "field_list", "ownership", 
		"max_priority", "flow_table", "notification", "statistics", "perm_name"
	};

	@Override
	public String getGrammarFileName() { return "apron.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public apronParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FinalContext extends ProgramContext {
		public Perm_listContext perm_list() {
			return getRuleContext(Perm_listContext.class,0);
		}
		public FinalContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFinal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFinal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFinal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			_localctx = new FinalContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(68); perm_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Perm_listContext extends ParserRuleContext {
		public Perm_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_perm_list; }
	 
		public Perm_listContext() { }
		public void copyFrom(Perm_listContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Perm_list__woContext extends Perm_listContext {
		public PermContext perm() {
			return getRuleContext(PermContext.class,0);
		}
		public Perm_list__woContext(Perm_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterPerm_list__wo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitPerm_list__wo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitPerm_list__wo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Perm_list__wContext extends Perm_listContext {
		public Perm_listContext perm_list() {
			return getRuleContext(Perm_listContext.class,0);
		}
		public PermContext perm() {
			return getRuleContext(PermContext.class,0);
		}
		public Perm_list__wContext(Perm_listContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterPerm_list__w(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitPerm_list__w(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitPerm_list__w(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Perm_listContext perm_list() throws RecognitionException {
		Perm_listContext _localctx = new Perm_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_perm_list);
		try {
			setState(74);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new Perm_list__woContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70); perm();
				}
				break;

			case 2:
				_localctx = new Perm_list__wContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71); perm();
				setState(72); perm_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PermContext extends ParserRuleContext {
		public PermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_perm; }
	 
		public PermContext() { }
		public void copyFrom(PermContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Perm__wContext extends PermContext {
		public Filter_exprContext filter_expr() {
			return getRuleContext(Filter_exprContext.class,0);
		}
		public TerminalNode LIMITING() { return getToken(apronParser.LIMITING, 0); }
		public Perm_nameContext perm_name() {
			return getRuleContext(Perm_nameContext.class,0);
		}
		public TerminalNode PERM() { return getToken(apronParser.PERM, 0); }
		public Perm__wContext(PermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterPerm__w(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitPerm__w(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitPerm__w(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Perm__woContext extends PermContext {
		public Perm_nameContext perm_name() {
			return getRuleContext(Perm_nameContext.class,0);
		}
		public TerminalNode PERM() { return getToken(apronParser.PERM, 0); }
		public Perm__woContext(PermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterPerm__wo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitPerm__wo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitPerm__wo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PermContext perm() throws RecognitionException {
		PermContext _localctx = new PermContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_perm);
		try {
			setState(83);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Perm__woContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76); match(PERM);
				setState(77); perm_name();
				}
				break;

			case 2:
				_localctx = new Perm__wContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(78); match(PERM);
				setState(79); perm_name();
				setState(80); match(LIMITING);
				setState(81); filter_expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Filter_exprContext extends ParserRuleContext {
		public int _p;
		public Filter_exprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Filter_exprContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_filter_expr; }
	 
		public Filter_exprContext() { }
		public void copyFrom(Filter_exprContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class Filter_expr__termContext extends Filter_exprContext {
		public Filter_termContext filter_term() {
			return getRuleContext(Filter_termContext.class,0);
		}
		public Filter_expr__termContext(Filter_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFilter_expr__term(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFilter_expr__term(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFilter_expr__term(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Filter_expr__expr_and_termContext extends Filter_exprContext {
		public Filter_exprContext filter_expr() {
			return getRuleContext(Filter_exprContext.class,0);
		}
		public Filter_termContext filter_term() {
			return getRuleContext(Filter_termContext.class,0);
		}
		public TerminalNode AND() { return getToken(apronParser.AND, 0); }
		public Filter_expr__expr_and_termContext(Filter_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFilter_expr__expr_and_term(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFilter_expr__expr_and_term(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFilter_expr__expr_and_term(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Filter_exprContext filter_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Filter_exprContext _localctx = new Filter_exprContext(_ctx, _parentState, _p);
		Filter_exprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, RULE_filter_expr);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Filter_expr__termContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(86); filter_term(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Filter_expr__expr_and_termContext(new Filter_exprContext(_parentctx, _parentState, _p));
					pushNewRecursionContext(_localctx, _startState, RULE_filter_expr);
					setState(88);
					if (!(1 >= _localctx._p)) throw new FailedPredicateException(this, "1 >= $_p");
					setState(89); match(AND);
					setState(90); filter_term(0);
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Filter_termContext extends ParserRuleContext {
		public int _p;
		public Filter_termContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Filter_termContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_filter_term; }
	 
		public Filter_termContext() { }
		public void copyFrom(Filter_termContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class Filter_term__factorContext extends Filter_termContext {
		public Filter_factorContext filter_factor() {
			return getRuleContext(Filter_factorContext.class,0);
		}
		public Filter_term__factorContext(Filter_termContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFilter_term__factor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFilter_term__factor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFilter_term__factor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Filter_term__term_or_factorContext extends Filter_termContext {
		public Filter_termContext filter_term() {
			return getRuleContext(Filter_termContext.class,0);
		}
		public Filter_factorContext filter_factor() {
			return getRuleContext(Filter_factorContext.class,0);
		}
		public TerminalNode OR() { return getToken(apronParser.OR, 0); }
		public Filter_term__term_or_factorContext(Filter_termContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFilter_term__term_or_factor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFilter_term__term_or_factor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFilter_term__term_or_factor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Filter_termContext filter_term(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Filter_termContext _localctx = new Filter_termContext(_ctx, _parentState, _p);
		Filter_termContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, RULE_filter_term);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Filter_term__factorContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(97); filter_factor();
			}
			_ctx.stop = _input.LT(-1);
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Filter_term__term_or_factorContext(new Filter_termContext(_parentctx, _parentState, _p));
					pushNewRecursionContext(_localctx, _startState, RULE_filter_term);
					setState(99);
					if (!(1 >= _localctx._p)) throw new FailedPredicateException(this, "1 >= $_p");
					setState(100); match(OR);
					setState(101); filter_factor();
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Filter_factorContext extends ParserRuleContext {
		public Filter_factorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter_factor; }
	 
		public Filter_factorContext() { }
		public void copyFrom(Filter_factorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Filter_factor__NOTContext extends Filter_factorContext {
		public TerminalNode NOT() { return getToken(apronParser.NOT, 0); }
		public Filter_factorContext filter_factor() {
			return getRuleContext(Filter_factorContext.class,0);
		}
		public Filter_factor__NOTContext(Filter_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFilter_factor__NOT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFilter_factor__NOT(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFilter_factor__NOT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Filter_factor__not_factorContext extends Filter_factorContext {
		public Filter_not_factorContext filter_not_factor() {
			return getRuleContext(Filter_not_factorContext.class,0);
		}
		public Filter_factor__not_factorContext(Filter_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFilter_factor__not_factor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFilter_factor__not_factor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFilter_factor__not_factor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Filter_factorContext filter_factor() throws RecognitionException {
		Filter_factorContext _localctx = new Filter_factorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_filter_factor);
		try {
			setState(110);
			switch (_input.LA(1)) {
			case 5:
			case ACTION:
			case OWN_FLOWS:
			case OTHERS_FLOWS:
			case ALL_FLOWS:
			case MAX_PRIORITY:
			case EVENT_INTERCEPTION:
			case MODIFY_EVENT_ORDER:
			case FLOW_LEVEL:
			case PORT_LEVEL:
			case SWITCH_LEVEL:
			case IP_SRC:
			case IP_DST:
			case TCP_SRC:
			case TCP_DST:
			case VLAN_ID:
			case IP:
			case SWITCH:
			case VIRTUAL:
			case RULE_COUNT_PER_SWITCH:
			case SIZE_PERCENTAGE_PER_SWITCH:
				_localctx = new Filter_factor__not_factorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(107); filter_not_factor();
				}
				break;
			case NOT:
				_localctx = new Filter_factor__NOTContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(108); match(NOT);
				setState(109); filter_factor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Filter_not_factorContext extends ParserRuleContext {
		public Filter_not_factorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter_not_factor; }
	 
		public Filter_not_factorContext() { }
		public void copyFrom(Filter_not_factorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Statistics_Context extends Filter_not_factorContext {
		public StatisticsContext statistics() {
			return getRuleContext(StatisticsContext.class,0);
		}
		public Statistics_Context(Filter_not_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterStatistics_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitStatistics_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitStatistics_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Max_priority_Context extends Filter_not_factorContext {
		public Max_priorityContext max_priority() {
			return getRuleContext(Max_priorityContext.class,0);
		}
		public Max_priority_Context(Filter_not_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterMax_priority_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitMax_priority_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitMax_priority_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Topo_Context extends Filter_not_factorContext {
		public TopoContext topo() {
			return getRuleContext(TopoContext.class,0);
		}
		public Topo_Context(Filter_not_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterTopo_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitTopo_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitTopo_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Flow_table_Context extends Filter_not_factorContext {
		public Flow_tableContext flow_table() {
			return getRuleContext(Flow_tableContext.class,0);
		}
		public Flow_table_Context(Filter_not_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFlow_table_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFlow_table_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFlow_table_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Filter_expr_Context extends Filter_not_factorContext {
		public Filter_exprContext filter_expr() {
			return getRuleContext(Filter_exprContext.class,0);
		}
		public Filter_expr_Context(Filter_not_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFilter_expr_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFilter_expr_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFilter_expr_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Flow_predicate_Context extends Filter_not_factorContext {
		public Flow_predicateContext flow_predicate() {
			return getRuleContext(Flow_predicateContext.class,0);
		}
		public Flow_predicate_Context(Filter_not_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterFlow_predicate_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitFlow_predicate_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitFlow_predicate_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Notification_Context extends Filter_not_factorContext {
		public NotificationContext notification() {
			return getRuleContext(NotificationContext.class,0);
		}
		public Notification_Context(Filter_not_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterNotification_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitNotification_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitNotification_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Action_Context extends Filter_not_factorContext {
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public TerminalNode ACTION() { return getToken(apronParser.ACTION, 0); }
		public Action_Context(Filter_not_factorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).enterAction_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof apronListener ) ((apronListener)listener).exitAction_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof apronVisitor ) return ((apronVisitor<? extends T>)visitor).visitAction_(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Ownership_Context extends Filter_not_factorContext {
		public OwnershipContext ownership() {
			return getRuleContext(OwnershipContext.class,0);
		}
